Removing config from classpath as is added through the code